Added Language selection menu and corrected application to 'text' only and not number/date formats. Changed the SE Game detection to allow specfication of DedicatedServer path instead for installation and use on Dedicated Server without Steam present. Added Browse button for Sandbox Selection in Load dialog. Small fixes. Updated altest SE binaries. Updated version prior to release.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -204,6 +204,7 @@
     </Compile>
     <Compile Include="Services\CommandAction.cs" />
     <Compile Include="Services\CommandReference.cs" />
+    <Compile Include="Services\FolderBrowserDialogViewModel.cs" />
     <Compile Include="Services\DelegateCommand.cs" />
     <Compile Include="Services\DialogCloser.cs" />
     <Compile Include="CoreToolbox.cs" />
