Added Character icons. Updated latest SE Binaries. Updated version prior to release. New Binaries appear to cause a breaking change, yet no code changes were required, only a recompile.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -682,6 +682,12 @@
   <ItemGroup>
     <None Include="Resources\add2.png" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\medical_bag.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\battery.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
