--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -203,6 +203,7 @@
     </Compile>
     <Compile Include="Services\CommandAction.cs" />
     <Compile Include="Services\CommandReference.cs" />
+    <Compile Include="Services\ButtonDropDownMenuBehavior.cs" />
     <Compile Include="Services\FolderBrowserDialogViewModel.cs" />
     <Compile Include="Services\DelegateCommand.cs" />
     <Compile Include="Services\DialogCloser.cs" />
