WIP on new Volumetric ray-tracing, which is still very slow and not 100% accurate due to rounding issues during raycast.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -143,6 +143,7 @@
     <Compile Include="Interop\Asteroids\MyVoxelContentCellContent.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMap.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMaterialCell.cs" />
+    <Compile Include="Interop\Asteroids\MyVoxelRayTracer.cs" />
     <Compile Include="Interop\InteropHelper.cs" />
     <Compile Include="Interop\Native.cs" />
     <Compile Include="Interop\SpaceEngineersAPI.cs" />
