Fixed issue where reading .sbc files in main Data path may contain same definition types and aren't getting merged. Fixed issue where corrupt .sbc files should be ignored. Fixed issue where Repair was forcing CharacterModel=Default_Astronaut, when other options may be valid.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -245,6 +245,7 @@
     <Compile Include="Models\ExplorerModel.cs" />
     <Compile Include="Interop\SpaceEngineersConsts.cs" />
     <Compile Include="Support\AppConstants.cs" />
+    <Compile Include="Support\ArrayHelper.cs" />
     <Compile Include="Support\DiagnosticsLogging4Net.cs" />
     <Compile Include="Support\ExceptionState.cs" />
     <Compile Include="Support\GlobalSettings.cs" />
