Enhanced modding support (practically complete). Fixed 'Repair' missing player not creating new player in one step (later repair step was fixing it). Completely reworked the Api Interop class to split out functionality from loading SE assets. Enhanced Sandbox Content loader to recognise compressed .sbc files (during import). Rearranged menu items for new Merge menu. Fixed support for obsolete cubes (or missing mods) when viewing cubes in ships (and tested ability to replace obsolete cubes). Obsolete cubes are not removed from save content when saved with SEToolbox, they are retained. Texture reader will load .png files now. Updated to latest SE 01.039.011 binaries, and updated version.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -144,9 +144,12 @@
     <Compile Include="Interop\Asteroids\MyVoxelMap.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMaterialCell.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelRayTracer.cs" />
-    <Compile Include="Interop\InteropHelper.cs" />
+    <Compile Include="Interop\ContentDataPath.cs" />
+    <Compile Include="Interop\SpaceEngineersExtensions.cs" />
     <Compile Include="Interop\Native.cs" />
-    <Compile Include="Interop\SpaceEngineersAPI.cs" />
+    <Compile Include="Interop\SpaceEngineersApi.cs" />
+    <Compile Include="Interop\SpaceEngineersCore.cs" />
+    <Compile Include="Interop\UserDataPath.cs" />
     <Compile Include="Models\BindableVector3DModel.cs" />
     <Compile Include="Models\BindablePoint3DModel.cs" />
     <Compile Include="Models\BindableSize3DModel.cs" />
@@ -704,6 +707,12 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\document.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\first_aid.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\components.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
