--- a/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
+++ b/Main/SEToolbox/SEToolbox.Image.Library/SEToolbox.ImageLibrary.csproj
@@ -46,6 +46,7 @@
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Xaml" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -54,7 +55,14 @@
     <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Effects\AlphaPixelEffect.cs" />
+    <Compile Include="Effects\MaskPixelEffect.cs" />
+    <Compile Include="Effects\EmissivePixelEffect.cs" />
+    <Compile Include="Effects\IPixelEffect.cs" />
+    <Compile Include="Effects\PixelEffect.cs" />
+    <Compile Include="Effects\DesaturatePixelEffect.cs" />
     <Compile Include="DxtUtil.cs" />
+    <Compile Include="ImageHelper.cs" />
     <Compile Include="ImageTextureUtil.cs" />
     <Compile Include="OctreeQuantizer.cs" />
     <Compile Include="PaletteQuantizer.cs" />
