--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Interop\Asteroids\MyVoxelMap.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelMaterialCell.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelRayTracer.cs" />
+    <Compile Include="Interop\BlueprintRequirement.cs" />
     <Compile Include="Interop\ContentDataPath.cs" />
     <Compile Include="Interop\SpaceEngineersExtensions.cs" />
     <Compile Include="Interop\Native.cs" />
