WIP on voxel converter. WIP on model read/writer. Moved ship broacast info to start of description.

--- a/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
+++ b/Main/SEToolbox/ToolboxTest/ToolboxTest.csproj
@@ -75,6 +75,8 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
+    <Compile Include="ModelTests.cs" />
+    <Compile Include="VoxelVolumeTests.cs" />
     <Compile Include="TextureTests.cs" />
     <Compile Include="InteropTests.cs" />
     <Compile Include="VolumentricTests.cs" />
