--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -146,6 +146,8 @@
     <Compile Include="Interop\Asteroids\MyVoxelRayTracer.cs" />
     <Compile Include="Interop\BlueprintRequirement.cs" />
     <Compile Include="Interop\ContentDataPath.cs" />
+    <Compile Include="Interop\Models\MyModel.cs" />
+    <Compile Include="Interop\Models\MyModelConverter.cs" />
     <Compile Include="Interop\SpaceEngineersExtensions.cs" />
     <Compile Include="Interop\Native.cs" />
     <Compile Include="Interop\SpaceEngineersApi.cs" />
