--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -169,6 +169,8 @@
     <Compile Include="Models\ComponentListModel.cs" />
     <Compile Include="Models\ComponentItemModel.cs" />
     <Compile Include="Models\BindablePoint3DIModel.cs" />
+    <Compile Include="Models\ChangeOwnerModel.cs" />
+    <Compile Include="Models\OwnerModel.cs" />
     <Compile Include="Models\ProgressCancelModel.cs" />
     <Compile Include="Models\Import3DAsteroidModel.cs" />
     <Compile Include="Models\InventoryEditorModel.cs" />
@@ -285,6 +287,7 @@
     <Compile Include="ViewModels\BaseViewModel.cs" />
     <Compile Include="ViewModels\AboutViewModel.cs" />
     <Compile Include="ViewModels\ComponentListViewModel.cs" />
+    <Compile Include="ViewModels\ChangeOwnerViewModel.cs" />
     <Compile Include="ViewModels\ProgressCancelViewModel.cs" />
     <Compile Include="ViewModels\Import3DAsteroidViewModel.cs" />
     <Compile Include="ViewModels\CubeItemViewModel.cs" />
@@ -342,6 +345,9 @@
     </Compile>
     <Compile Include="Views\ControlInventory.xaml.cs">
       <DependentUpon>ControlInventory.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Views\WindowChangeOwner.xaml.cs">
+      <DependentUpon>WindowChangeOwner.xaml</DependentUpon>
     </Compile>
     <Compile Include="Views\WindowProgressCancel.xaml.cs">
       <DependentUpon>WindowProgressCancel.xaml</DependentUpon>
@@ -443,6 +449,10 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="Views\ControlInventory.xaml">
+      <Generator>MSBuild:Compile</Generator>
+      <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Views\WindowChangeOwner.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </Page>
@@ -738,6 +748,9 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Resources\Asteroid_model.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Resources\users_back.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
