Added option fill type of none for Asteroid field generation. Added added asteroid size detail to asteroid import.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -144,6 +144,7 @@
     <Compile Include="Models\Asteroids\AsteroidSeedFiller.cs" />
     <Compile Include="Models\Asteroids\AsteroidSeedFillProperties.cs" />
     <Compile Include="Models\Asteroids\AsteroidByteFillProperties.cs" />
+    <Compile Include="Models\Asteroids\AsteroidFiller.cs" />
     <Compile Include="Models\Asteroids\IMyVoxelFiller.cs" />
     <Compile Include="Models\Asteroids\IMyVoxelFillProperties.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelTaskWorker.cs" />
