Fixed issue with sorting Component lists. Fixed issue with duplicate subtype names in cube switching. WIP on rotation issue.

--- a/Main/SEToolbox/SEToolbox/SEToolbox.csproj
+++ b/Main/SEToolbox/SEToolbox/SEToolbox.csproj
@@ -138,6 +138,7 @@
     </Compile>
     <Compile Include="Interfaces\IMainView.cs" />
     <Compile Include="Interop\Asteroids\MyVoxelRayTracerConsts.cs" />
+    <Compile Include="Interop\QuaternionD.cs" />
     <Compile Include="Interop\SpaceEngineersResources.cs" />
     <Compile Include="Interop\SpaceEngineersRepair.cs" />
     <Compile Include="Models\Asteroids\AsteroidByteFiller.cs" />
